--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
       font-size: 1rem;
       box-sizing: border-box;
       color: #1A4063;
-      background-color: #fff;
+      background-color: #edebed;
     }
 
     #GD-snippet-form select {
@@ -141,8 +141,8 @@
     <!-- GovDelivery Newsletter Embed -->
     <section id="newsletter-signup" class="section-band bg-lighter">
       <div class="container">
-        <h3>Subscribe for Updates</h3>
-        <p>Stay current with ANC news and events by signing up below:</p>
+        <h3>Subscribe</h3>
+        <p>Sign up for my ANC newsletter below:</p>
 
         <form id="GD-snippet-form" action="https://public.govdelivery.com/accounts/DCWASHOANC/subscribers/qualify"
           accept-charset="UTF-8" method="post">
