--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     #GD-snippet-form .button_panel input[type="submit"] {
       padding: 0.7em 1.5em;
       background-color: #1A4063;
-      color: #fff;
+      color: #edebed;
       border: none;
       border-radius: 0.5rem;
       font-size: 1rem;
