--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="form-group wireless_fields" style="display: none;">
-              <label for="phone">Wireless Number <span class="required" aria-label="required">*</span></label>
+              <label for="phone">Phone Number <span class="required" aria-label="required">*</span></label>
               <div class="input_group">
                 <select name="country_code_display" id="country_code_display" disabled="disabled"
                   aria-label="Country code">
