--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
             <legend class="sr-only">Email, Newsletter, and Alerts</legend>
 
             <div class="form-group">
-              <label for="subscription_type">Subscription Type</label>
+              <label for="email">Subscription Type<span class="required" aria-label="required">*</span></label>
               <select name="subscription_type" id="subscription_type">
                 <option selected="selected" value="email">Email</option>
                 <option value="phone">SMS/Text Message</option>
