--- a/news.html
+++ b/news.html
@@ -75,7 +75,19 @@
         <section id="news" class="section-band bg-lighter">
             <div class="container">
                 <h3>Newsletter</h3>
-                <p> Sign up for future editions of my newsletter, and read the latest copy below: <i>Forthcoming</i>
+                <p>
+                    <li><a href="https://public.govdelivery.com/accounts/DCWASHOANC/signup/47632">Sign Up</a></li> for
+                    future editions of my newsletter, and read the latest copy below:
+                <div class="iframe-container clipped-sheet">
+                    <iframe
+                        src="https://docs.google.com/document/d/1-eDIbWG2k4xzjgm6OAF9fpmE4yjzxyivsptZBcovhys/edit?usp=share_link"
+                        title="Commissioner Andrew DeFrank's Latest Newsletter" width="100%" height="600" loading="lazy"
+                        scrolling="no" frameborder="0" aria-describedby="initiatives-description">
+                    </iframe>
+                    <div id="initiatives-description" class="sr-only">
+                        A Google Doc showing the most recent newsletter.
+                    </div>
+                </div>
                 </p>
 
                 <div class="container">
