--- a/news.html
+++ b/news.html
@@ -80,10 +80,7 @@
                     future editions of my newsletter, and read the latest copy below:
                 <div class="iframe-container clipped-sheet">
                     <iframe
-                        src="https://docs.google.com/document/d/1-eDIbWG2k4xzjgm6OAF9fpmE4yjzxyivsptZBcovhys/edit?usp=share_link"
-                        title="Commissioner Andrew DeFrank's Latest Newsletter" width="100%" height="600" loading="lazy"
-                        scrolling="no" frameborder="0" aria-describedby="initiatives-description">
-                    </iframe>
+                        src="https://docs.google.com/document/d/e/2PACX-1vQsJdUdSSkPKonNiBn4oJ8edeLCOap72yegxZrFFlb2ApRmqg4swdGHYi8e0d2_ScdgzoV0w42Eys7c/pub?embedded=true"></iframe>
                     <div id="initiatives-description" class="sr-only">
                         A Google Doc showing the most recent newsletter.
                     </div>
