--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
             <div class="container">
                 <h3>Newsletter</h3>
                 <p>
-                    <li><a href="https://public.govdelivery.com/accounts/DCWASHOANC/signup/47632">Sign Up</a></li> for
+                    <a href="https://public.govdelivery.com/accounts/DCWASHOANC/signup/47632">Sign Up</a> for
                     future editions of my newsletter, and read the latest copy below:
                 <div class="iframe-container clipped-sheet">
                     <iframe
