--- a/news.html
+++ b/news.html
@@ -82,9 +82,9 @@
                     <iframe
                         src="https://docs.google.com/document/d/e/2PACX-1vQsJdUdSSkPKonNiBn4oJ8edeLCOap72yegxZrFFlb2ApRmqg4swdGHYi8e0d2_ScdgzoV0w42Eys7c/pub?embedded=true"
                         title="Commissioner Andrew DeFrank's Msot Recent Newsletter" width="100%" height="600"
-                        loading="lazy" scrolling="no" frameborder="0"
-                        aria-describedby="initiatives-description">></iframe>
-                    <div id="initiatives-description" class="sr-only">
+                        loading="lazy" scrolling="yes" frameborder="0"
+                        aria-describedby="newsletter-description"></iframe>
+                    <div id="newsletter-description" class="sr-only">
                         A Google Doc showing the most recent newsletter.
                     </div>
                 </div>
