--- a/news.html
+++ b/news.html
@@ -80,14 +80,15 @@
                     future editions of my newsletter, and read the latest copy below:
                 <div class="iframe-container clipped-sheet">
                     <iframe
-                        src="https://docs.google.com/document/d/e/2PACX-1vSjZfP_R3aXjmTsYBOAfGcC_vUZh4PQ_-gSJfXdCqV71FlTFnbXgs9ktu-VXOpvF30i3Z_iYeabtTrs/pub?embedded=true"></iframe>
-                    title="Commissioner Andrew DeFrank's Msot Recent Newsletter" width="100%" height="600"
-                    loading="lazy" scrolling="yes" frameborder="0"
-                    aria-describedby="newsletter-description"></iframe>
+                        src="https://docs.google.com/document/d/e/2PACX-1vSjZfP_R3aXjmTsYBOAfGcC_vUZh4PQ_-gSJfXdCqV71FlTFnbXgs9ktu-VXOpvF30i3Z_iYeabtTrs/pub?embedded=true"
+                        title="Commissioner Andrew DeFrank's Most Recent Newsletter" width="100%" height="600"
+                        loading="lazy" scrolling="yes" frameborder="0" aria-describedby="newsletter-description">
+                    </iframe>
                     <div id="newsletter-description" class="sr-only">
                         A Google Doc showing the most recent newsletter.
                     </div>
                 </div>
+
                 </p>
 
                 <div class="container">
