--- a/news.html
+++ b/news.html
@@ -79,7 +79,8 @@
                     <a href="https://public.govdelivery.com/accounts/DCWASHOANC/signup/47632">Sign Up</a> for
                     future editions of my newsletter, and read the latest copy below:
                 <div class="iframe-container clipped-sheet zoomed-iframe">
-                    <iframe src="https://docs.google.com/document/d/e/2PACX-.../pub?embedded=true"
+                    <iframe
+                        src="https://docs.google.com/document/d/e/2PACX-1vSjZfP_R3aXjmTsYBOAfGcC_vUZh4PQ_-gSJfXdCqV71FlTFnbXgs9ktu-VXOpvF30i3Z_iYeabtTrs/pub?embedded=true"
                         title="Commissioner Andrew DeFrank's Most Recent Newsletter" loading="lazy" scrolling="yes"
                         frameborder="0" aria-describedby="newsletter-description">
                     </iframe>
