--- a/actions.html
+++ b/actions.html
@@ -85,7 +85,7 @@
           the issue is, and <b>how</b> it will be resolved, if possible.
         </p>
 
-        <div class="iframe-container clipped-sheet">
+        <div class="iframe-actions-container clipped-sheet">
           <iframe
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
             title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
