--- a/news.html
+++ b/news.html
@@ -77,7 +77,7 @@
                 <h3>Newsletter</h3>
                 <p>
                     <a href="https://public.govdelivery.com/accounts/DCWASHOANC/signup/47632">Sign Up</a> for
-                    future editions of my newsletter, and read the latest edition below:
+                    future editions of the 2B01 newsletter, and read the latest edition below:
                 <div class="iframe-news-container clipped-sheet">
                     <iframe
                         src="https://docs.google.com/document/d/e/2PACX-1vSjZfP_R3aXjmTsYBOAfGcC_vUZh4PQ_-gSJfXdCqV71FlTFnbXgs9ktu-VXOpvF30i3Z_iYeabtTrs/pub?embedded=true"
