--- a/actions.html
+++ b/actions.html
@@ -87,7 +87,7 @@
 
         <div class="iframe-actions-container clipped-sheet">
           <iframe
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&amp;single=true&amp;widget=true&amp;headers=false"
             title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
             height="600" loading="lazy" scrolling="no" frameborder="0" aria-describedby="initiatives-description">
           </iframe>
