--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -2,117 +2,120 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Andrew DeFrank serves as ANC 2B01 Commissioner for North Dupont Circle. Contact your local Advisory Neighborhood Commissioner for community concerns, questions, and civic engagement in Washington DC.">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Andrew DeFrank serves as ANC 2B01 Commissioner for North Dupont Circle. Contact your local Advisory Neighborhood Commissioner for community concerns, questions, and civic engagement in Washington DC.">
 
 
-  <!-- SEO Meta Tags -->
-  <title>ANC 2B01 - Commissioner Andrew DeFrank - ANC 2B01 </title>
+    <!-- SEO Meta Tags -->
+    <title>ANC 2B01 - Commissioner Andrew DeFrank - ANC 2B01 </title>
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://anc2b01.org" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://anc2b01.org" />
 
-  <!--  favicon  -->
-  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png" />
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-  <link rel="shortcut icon" href="/images/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
-  <link rel="manifest" href="/images/site.webmanifest" />
+    <!--  favicon  -->
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/site.webmanifest" />
 
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Preload Images -->
-  <link rel="preload" href="images/anc-headshot.jpg" as="image" type="image/png" />
-  <link rel="preload" href="images/anc-map.png" as="image" type="image/png" />
+    <!-- Preload Images -->
+    <link rel="preload" href="images/anc-headshot.jpg" as="image" type="image/png" />
+    <link rel="preload" href="images/anc-map.png" as="image" type="image/png" />
 
 </head>
 
 <body>
-  <!-- The rest of your page here -->
+    <!-- The rest of your page here -->
 
-  <!-- Skip Navigation Link for Accessibility -->
-  <a href="#main-content" class="skip-nav">Skip to main content</a>
+    <!-- Skip Navigation Link for Accessibility -->
+    <a href="#main-content" class="skip-nav">Skip to main content</a>
 
-  <a id="top"></a>
-  <!-- Fixed header that remains visible as you scroll -->
-  <header class="site-header" role="banner">
-    <div class="left">
-      <!-- Left side of the header: title and role -->
-      <h1><a href="index.html">Andrew DeFrank</a></h1>
-      <h2 class="subtitle">Commissioner, ANC 2B01</h2>
-    </div>
+    <a id="top"></a>
+    <!-- Fixed header that remains visible as you scroll -->
+    <header class="site-header" role="banner">
+        <div class="left">
+            <!-- Left side of the header: title and role -->
+            <h1><a href="index.html">Andrew DeFrank</a></h1>
+            <h2 class="subtitle">Commissioner, ANC 2B01</h2>
+        </div>
 
-    <nav class="right" role="navigation" id="main-navigation" aria-label="Main navigation">
-      <!-- Hamburger button -->
-      <button class="menu-toggle" aria-controls="primary-menu" aria-label="Toggle navigation menu"
-        aria-expanded="false">
-        ☰
-      </button>
-      <ul id="primary-menu">
-        <li><a href="about-me.html">About Me</a></li>
-        <li><a href="about-ancs.html">What's an ANC?</a></li>
-        <li><a href="anc-2b01.html">ANC 2B01</a></li>
-        <li><a href="actions.html">Actions</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+        <nav class="right" role="navigation" id="main-navigation" aria-label="Main navigation">
+            <!-- Hamburger button -->
+            <button class="menu-toggle" aria-controls="primary-menu" aria-label="Toggle navigation menu"
+                aria-expanded="false">
+                ☰
+            </button>
+            <ul id="primary-menu">
+                <li><a href="about-me.html">About Me</a></li>
+                <li><a href="about-ancs.html">What's an ANC?</a></li>
+                <li><a href="anc-2b01.html">ANC 2B01</a></li>
+                <li><a href="actions.html">Actions</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Dynamic spacer set to match height of fixed header (prevents content overlap) -->
-  <div class="header-spacer"></div>
+    <!-- Dynamic spacer set to match height of fixed header (prevents content overlap) -->
+    <div class="header-spacer"></div>
 
-  <!-- Main content of the page -->
-  <main id="main-content" role="main">
-
-    <!-- Interactive map with enhanced accessibility -->
-    <section id="anc" class="section-band bg-lighter">
-      <div class="container">
-        <h3>About ANC 2B01</h3>
-        <p>ANC 2B01 is one of nine single-member districts in <a href="https://www.dupontcircleanc.net/wordpress/"
-            target="_blank" rel="noopener noreferrer">ANC
-            2B</a>, which covers the Dupont Circle
-          neighborhood.
-        </p>
-        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the interactive map below:
-        </p>
+    <!-- Main content of the page -->
+    <main id="main-content" role="main">
 
         <!-- Interactive map with enhanced accessibility -->
-        <figure class="map-container" role="region"
-          aria-label="Interactive map of DC Advisory Neighborhood Commissions">
-          <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;" allowfullscreen
-            loading="lazy" title="DC ANC Interactive Map - Enter your address to find your ANC district">
-            Your browser does not support iframes. You can view the map directly at
-            <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
-          </iframe>
-          <figcaption class="credit">Source: OpenANC.org</figcaption>
-        </figure>
-        <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
-          bookstore,
-          Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the American
-          Geophysical Union
-          building, the forthcoming <a
-            href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
-            target="_blank" rel="noopener noreferrer">
-            Connecticut Ave Deckover</a> and much more.</p>
-      </div>
-    </section>
-  </main>
+        <section id="anc" class="section-band bg-lighter">
+            <div class="container">
+                <h3>About ANC 2B01</h3>
+                <p>ANC 2B01 is one of nine single-member districts in <a
+                        href="https://www.dupontcircleanc.net/wordpress/" target="_blank" rel="noopener noreferrer">ANC
+                        2B</a>, which covers the Dupont Circle
+                    neighborhood.
+                </p>
+                <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the interactive map
+                    below:
+                </p>
 
-  <!-- Footer area -->
-  <footer role="contentinfo">
-    <p>&copy; 2025 Andrew DeFrank, all rights reserved</p>
-  </footer>
+                <!-- Interactive map with enhanced accessibility -->
+                <figure class="map-container" role="region"
+                    aria-label="Interactive map of DC Advisory Neighborhood Commissions">
+                    <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;"
+                        allowfullscreen loading="lazy"
+                        title="DC ANC Interactive Map - Enter your address to find your ANC district">
+                        Your browser does not support iframes. You can view the map directly at
+                        <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
+                    </iframe>
+                    <figcaption class="credit">Source: OpenANC.org</figcaption>
+                </figure>
+                <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
+                    bookstore,
+                    Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the
+                    American
+                    Geophysical Union
+                    building, the forthcoming <a
+                        href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
+                        target="_blank" rel="noopener noreferrer">
+                        Connecticut Ave Deckover</a> and much more.</p>
+            </div>
+        </section>
+    </main>
 
-  <!-- JavaScript for functionality -->
-  <script src="js/main.js"></script>
+    <!-- Footer area -->
+    <footer role="contentinfo">
+        <p>&copy; 2025 Andrew DeFrank, all rights reserved</p>
+    </footer>
+
+    <!-- JavaScript for functionality -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
